[workspace]
members  = ["crates/*", "sys/*", "tools/*", "examples/*"]
resolver = "2"

[workspace.dependencies]
ohos-bundle-binding                 = { version = "0.0.1", path = "crates/bundle" }
ohos-init-binding                   = { version = "0.0.3", path = "crates/init" }
ohos-hilog-binding                  = { version = "0.1.2", path = "crates/hilog" }
ohos-asset-binding                  = { version = "0.0.1", path = "crates/asset" }
ohos-resource-manager-binding       = { version = "0.1.3", path = "crates/resource_manager" }
ohos-ability-access-control-binding = { version = "0.0.1", path = "crates/ability_access_control" }
ohos-xcomponent-binding             = { version = "0.2.0", path = "crates/xcomponent" }
ohos-arkui-binding                  = { version = "0.1.0", path = "crates/arkui" }
ohos-vsync-binding                  = { version = "0.1.0", path = "crates/vsync" }
ohos-display-soloist-binding        = { version = "0.1.0", path = "crates/native_display_soloist" }
ohos-input-binding                  = { version = "0.0.1", path = "crates/input" }
ohos-ime-binding                    = { version = "0.1.0", path = "crates/ime" }
ohos-display-binding                = { version = "0.0.1", path = "crates/display" }
ohos-drawing-binding                = { version = "0.1.0", path = "crates/drawing" }
ohos-native-window-binding          = { version = "0.1.1", path = "crates/native_window" }
ohos-native-buffer-binding          = { version = "0.1.0", path = "crates/native_buffer" }
ohos-udmf-binding                   = { version = "0.0.1", path = "crates/udmf" }
ohos-pasteboard-binding             = { version = "0.0.1", path = "crates/pasteboard" }
ohos-web-binding                    = { version = "0.1.0", path = "crates/web" }
ohos-sensor-binding                 = { version = "0.1.0", path = "crates/sensor" }
ohos-vibrator-binding               = { version = "0.1.0", path = "crates/vibrator" }
ohos-fileuri-binding                = { version = "0.1.0", path = "crates/fileuri" }
ohos-fileshare-binding              = { version = "0.1.0", path = "crates/fileshare" }
ohos-qos-binding                    = { version = "0.1.0", path = "crates/qos" }

ohos-bundle-sys                 = { version = "0.0.2", path = "sys/ohos-bundle-sys" }
ohos-init-sys                   = { version = "0.0.2", path = "sys/ohos-init-sys" }
ohos-hilogs-sys                 = { version = "0.0.2", path = "sys/ohos-hilogs-sys" }
ohos-asset-sys                  = { version = "0.0.1", path = "sys/ohos-asset-sys" }
ohos-resource-manager-sys       = { version = "0.1.0", path = "sys/ohos-resource-manager-sys" }
ohos-ability-access-control-sys = { version = "0.0.1", path = "sys/ohos-ability-access-control-sys" }
ohos-xcomponent-sys             = { version = "0.0.2", path = "sys/ohos-xcomponent-sys" }
ohos-arkui-sys                  = { version = "0.0.1", path = "sys/ohos-arkui-sys" }
ohos-native-vsync-sys           = { version = "0.0.1", path = "sys/ohos-native-vsync-sys" }
ohos-display-soloist-sys        = { version = "0.0.1", path = "sys/ohos-display-soloist-sys" }
ohos-input-sys                  = { version = "0.0.1", path = "sys/ohos-input-sys" }
ohos-input-method-sys           = { version = "0.1.0", path = "sys/ohos-input-method-sys" }
ohos-display-sys                = { version = "0.0.1", path = "sys/ohos-display-sys" }
ohos-native-drawing-sys         = { version = "0.1.0", path = "sys/ohos-native-drawing-sys" }
ohos-accessibility-sys          = { version = "0.0.1", path = "sys/ohos-accessibility-sys" }
ohos-native-window-sys          = { version = "0.0.1", path = "sys/ohos-native-window-sys" }
ohos-native-buffer-sys          = { version = "0.0.1", path = "sys/ohos-native-buffer-sys" }
ohos-udmf-sys                   = { version = "0.0.1", path = "sys/ohos-udmf-sys" }
ohos-pasteboard-sys             = { version = "0.0.1", path = "sys/ohos-pasteboard-sys" }
ohos-image-sys                  = { version = "0.0.1", path = "sys/ohos-image-sys" }
ohos-image-native-sys           = { version = "0.0.1", path = "sys/ohos-image-native-sys" }
ohos-web-sys                    = { version = "0.0.1", path = "sys/ohos-web-sys" }
ohos-sensor-sys                 = { version = "0.1.0", path = "sys/ohos-sensor-sys" }
ohos-vibrator-sys               = { version = "0.1.0", path = "sys/ohos-vibrator-sys" }
ohos-qos-sys                    = { version = "0.1.0", path = "sys/ohos-qos-sys" }
ohos-audio-sys                  = { version = "0.0.1", path = "sys/ohos-audio-sys" }
ohos-fileuri-sys                = { version = "0.1.0", path = "sys/ohos-fileuri-sys" }
ohos-fileshare-sys              = { version = "0.1.0", path = "sys/ohos-fileshare-sys" }

ohos_enum_macro = { version = "0.1.0", path = "crates/enum_macro" }

napi-sys-ohos    = { version = "1.1.3", features = ["napi8"] }
napi-ohos        = { version = "1.1.3" }
napi-derive-ohos = { version = "1.1.3" }
napi-build-ohos  = { version = "1.1.3" }

libc              = { version = "0.2" }
syn               = { version = "2.0" }
quote             = { version = "1.0" }
proc-macro2       = { version = "1.0" }
convert_case      = { version = "0.6" }
regex             = { version = "1.0" }
bitflags          = { version = "2.6" }
raw-window-handle = { version = "0.6" }


[workspace.lints.clippy]
not_unsafe_ptr_arg_deref = "allow"
