[workspace]
members  = ["crates/*", "sys/*", "tools/*", "examples/*"]
resolver = "2"

[workspace.package]
edition      = "2021"
rust-version = "1.88"

[workspace.dependencies]
ohos-bundle-binding                 = { version = "0.1.1", path = "crates/bundle" }
ohos-init-binding                   = { version = "0.1.1", path = "crates/init" }
ohos-hilog-binding                  = { version = "0.2.1", path = "crates/hilog" }
ohos-asset-binding                  = { version = "0.1.1", path = "crates/asset" }
ohos-resource-manager-binding       = { version = "0.3.1", path = "crates/resource_manager" }
ohos-image-binding                  = { version = "0.1.1", path = "crates/image" }
ohos-image-native-binding           = { version = "0.0.4", path = "crates/image_native" }
ohos-ability-access-control-binding = { version = "0.1.1", path = "crates/ability_access_control" }
ohos-xcomponent-binding             = { version = "0.3.1", path = "crates/xcomponent" }
ohos-arkui-binding                  = { version = "0.2.3", path = "crates/arkui" }
ohos-vsync-binding                  = { version = "0.2.1", path = "crates/vsync" }
ohos-display-soloist-binding        = { version = "0.2.1", path = "crates/native_display_soloist" }
ohos-ime-binding                    = { version = "0.2.1", path = "crates/ime" }
ohos-display-binding                = { version = "0.1.1", path = "crates/display" }
ohos-drawing-binding                = { version = "0.2.1", path = "crates/drawing" }
ohos-native-window-binding          = { version = "0.2.3", path = "crates/native_window" }
ohos-native-buffer-binding          = { version = "0.2.3", path = "crates/native_buffer" }
ohos-udmf-binding                   = { version = "0.0.4", path = "crates/udmf" }
ohos-pasteboard-binding             = { version = "0.0.4", path = "crates/pasteboard" }
ohos-web-binding                    = { version = "0.2.1", path = "crates/web" }
ohos-sensor-binding                 = { version = "0.2.1", path = "crates/sensor" }
ohos-vibrator-binding               = { version = "0.2.1", path = "crates/vibrator" }
ohos-fileuri-binding                = { version = "0.2.1", path = "crates/fileuri" }
ohos-fileshare-binding              = { version = "0.2.1", path = "crates/fileshare" }
ohos-qos-binding                    = { version = "0.2.1", path = "crates/qos" }
ohos-net-connection-binding         = { version = "0.1.1", path = "crates/net_connection" }
ohos-net-stack-binding              = { version = "0.1.1", path = "crates/net_stack" }
ohos-arkui-input-binding            = { version = "0.1.1", path = "crates/arkui_input" }
ohos-jsvm-binding                   = { version = "0.1.1", path = "crates/jsvm" }
hms-opengtx-binding                 = { version = "0.1.1", path = "crates/opengtx" }
ohos-camera-binding                 = { version = "0.1.1", path = "crates/camera" }
ohos-huks-binding                   = { version = "0.1.0", path = "crates/huks" }
ohos-crypto-binding                 = { version = "0.1.0", path = "crates/crypto" }
ohos-hiappevent-binding             = { version = "0.1.0", path = "crates/hiappevent" }
ohos-hitrace-binding                = { version = "0.1.0", path = "crates/hitrace" }
ohos-hidebug-binding                = { version = "0.1.0", path = "crates/hidebug" }
ohos-usb-serial-binding             = { version = "0.1.0", path = "crates/usb_serial" }
ohos-hicollie-binding               = { version = "0.1.0", path = "crates/hicollie" }

ohos-bundle-sys                 = { version = "0.1.1", path = "sys/ohos-bundle-sys" }
ohos-init-sys                   = { version = "0.1.1", path = "sys/ohos-init-sys" }
ohos-hilogs-sys                 = { version = "0.1.1", path = "sys/ohos-hilogs-sys" }
ohos-asset-sys                  = { version = "0.1.1", path = "sys/ohos-asset-sys" }
ohos-resource-manager-sys       = { version = "0.3.1", path = "sys/ohos-resource-manager-sys" }
ohos-ability-access-control-sys = { version = "0.1.1", path = "sys/ohos-ability-access-control-sys" }
ohos-xcomponent-sys             = { version = "0.1.1", path = "sys/ohos-xcomponent-sys" }
ohos-arkui-sys                  = { version = "0.1.1", path = "sys/ohos-arkui-sys" }
ohos-native-vsync-sys           = { version = "0.1.1", path = "sys/ohos-native-vsync-sys" }
ohos-display-soloist-sys        = { version = "0.1.1", path = "sys/ohos-display-soloist-sys" }
ohos-input-method-sys           = { version = "0.2.1", path = "sys/ohos-input-method-sys" }
ohos-display-sys                = { version = "0.1.1", path = "sys/ohos-display-sys" }
ohos-native-drawing-sys         = { version = "0.2.1", path = "sys/ohos-native-drawing-sys" }
ohos-accessibility-sys          = { version = "0.0.2", path = "sys/ohos-accessibility-sys" }
ohos-native-window-sys          = { version = "0.1.1", path = "sys/ohos-native-window-sys" }
ohos-native-buffer-sys          = { version = "0.1.1", path = "sys/ohos-native-buffer-sys" }
ohos-udmf-sys                   = { version = "0.0.2", path = "sys/ohos-udmf-sys" }
ohos-native-pasteboard-sys      = { version = "0.1.1", path = "sys/ohos-native-pasteboard-sys" }
ohos-image-sys                  = { version = "0.0.2", path = "sys/ohos-image-sys" }
ohos-image-native-sys           = { version = "0.0.2", path = "sys/ohos-image-native-sys" }
ohos-web-sys                    = { version = "0.1.1", path = "sys/ohos-web-sys" }
ohos-sensor-sys                 = { version = "0.2.1", path = "sys/ohos-sensor-sys" }
ohos-vibrator-sys               = { version = "0.2.1", path = "sys/ohos-vibrator-sys" }
ohos-qos-sys                    = { version = "0.2.1", path = "sys/ohos-qos-sys" }
ohos-net-connection-sys         = { version = "0.1.1", path = "sys/ohos-net-connection-sys" }
ohos-net-stack-sys              = { version = "0.1.1", path = "sys/ohos-net-stack-sys" }
ohos-audio-sys                  = { version = "0.1.1", path = "sys/ohos-audio-sys" }
ohos-fileuri-sys                = { version = "0.2.1", path = "sys/ohos-fileuri-sys" }
ohos-fileshare-sys              = { version = "0.2.1", path = "sys/ohos-fileshare-sys" }
ohos-arkui-input-sys            = { version = "0.1.1", path = "sys/ohos-arkui-input-sys" }
ohos-jsvm-sys                   = { version = "0.1.1", path = "sys/ohos-jsvm-sys" }
hms-opengtx-sys                 = { version = "0.1.1", path = "sys/hms-opengtx-sys" }
ohos-camera-sys                 = { version = "0.1.0", path = "sys/ohos-camera-sys" }
ohos-huks-sys                   = { version = "0.1.0", path = "sys/ohos-huks-sys" }
ohos-hicollie-sys               = { version = "0.1.0", path = "sys/ohos-hicollie-sys" }
ohos-crypto-sys                 = { version = "0.1.0", path = "sys/ohos-crypto-sys" }
ohos-hiappevent-sys             = { version = "0.1.0", path = "sys/ohos-hiappevent-sys" }
ohos-hitrace-sys                = { version = "0.1.0", path = "sys/ohos-hitrace-sys" }
ohos-hidebug-sys                = { version = "0.1.0", path = "sys/ohos-hidebug-sys" }
ohos-usb-sys                    = { version = "0.1.0", path = "sys/ohos-usb-sys" }
ohos-usb-serial-sys             = { version = "0.1.0", path = "sys/ohos-usb-serial-sys" }
ohos-ability-base-sys           = { version = "0.1.0", path = "sys/ohos-ability-base-sys" }
ohos-ability-runtime-sys        = { version = "0.1.0", path = "sys/ohos-ability-runtime-sys" }
ohos-audio-suite-sys            = { version = "0.1.0", path = "sys/ohos-audio-suite-sys" }
ohos-background-process-manager-sys = { version = "0.1.0", path = "sys/ohos-background-process-manager-sys" }
ohos-battery-info-sys           = { version = "0.1.0", path = "sys/ohos-battery-info-sys" }
ohos-bluetooth-sys              = { version = "0.1.0", path = "sys/ohos-bluetooth-sys" }
ohos-cert-manager-sys           = { version = "0.1.0", path = "sys/ohos-cert-manager-sys" }
ohos-child-process-sys          = { version = "0.1.0", path = "sys/ohos-child-process-sys" }
ohos-common-event-sys           = { version = "0.1.0", path = "sys/ohos-common-event-sys" }
ohos-content-embed-sys          = { version = "0.1.0", path = "sys/ohos-content-embed-sys" }
ohos-device-manager-sys         = { version = "0.1.0", path = "sys/ohos-device-manager-sys" }
ohos-dlp-permission-sys         = { version = "0.1.0", path = "sys/ohos-dlp-permission-sys" }
ohos-ffrt-sys                   = { version = "0.1.0", path = "sys/ohos-ffrt-sys" }
ohos-game-controller-sys        = { version = "0.1.0", path = "sys/ohos-game-controller-sys" }
ohos-hid-sys                    = { version = "0.1.0", path = "sys/ohos-hid-sys" }
ohos-input-sys                  = { version = "0.1.0", path = "sys/ohos-input-sys" }
ohos-ipc-sys                    = { version = "0.1.0", path = "sys/ohos-ipc-sys" }
ohos-location-sys               = { version = "0.1.0", path = "sys/ohos-location-sys" }
ohos-midi-sys                   = { version = "0.1.0", path = "sys/ohos-midi-sys" }
ohos-mindspore-sys              = { version = "0.1.0", path = "sys/ohos-mindspore-sys" }
ohos-native-color-space-manager-sys = { version = "0.1.0", path = "sys/ohos-native-color-space-manager-sys" }
ohos-native-effect-sys          = { version = "0.1.0", path = "sys/ohos-native-effect-sys" }
ohos-native-fence-sys           = { version = "0.1.0", path = "sys/ohos-native-fence-sys" }
ohos-native-image-sys           = { version = "0.1.0", path = "sys/ohos-native-image-sys" }
ohos-nnrt-sys                   = { version = "0.1.0", path = "sys/ohos-nnrt-sys" }
ohos-notification-sys           = { version = "0.1.0", path = "sys/ohos-notification-sys" }
ohos-os-account-sys             = { version = "0.1.0", path = "sys/ohos-os-account-sys" }
ohos-print-sys                  = { version = "0.1.0", path = "sys/ohos-print-sys" }
ohos-purgeable-memory-sys       = { version = "0.1.0", path = "sys/ohos-purgeable-memory-sys" }
ohos-scan-sys                   = { version = "0.1.0", path = "sys/ohos-scan-sys" }
ohos-tee-client-sys             = { version = "0.1.0", path = "sys/ohos-tee-client-sys" }
ohos-telephony-sys              = { version = "0.1.0", path = "sys/ohos-telephony-sys" }
ohos-time-service-sys           = { version = "0.1.0", path = "sys/ohos-time-service-sys" }
ohos-transient-task-sys         = { version = "0.1.0", path = "sys/ohos-transient-task-sys" }
ohos-wifi-sys                   = { version = "0.1.0", path = "sys/ohos-wifi-sys" }

ohos-enum-derive = { version = "0.1.1", path = "crates/enum_derive" }

napi-sys-ohos    = { version = "1.1.3", features = ["napi8"] }
napi-ohos        = { version = "1.1.3" }
napi-derive-ohos = { version = "1.1.3" }
napi-build-ohos  = { version = "1.1.3" }

libc              = { version = "0.2" }
syn               = { version = "2.0" }
quote             = { version = "1.0" }
proc-macro2       = { version = "1.0" }
convert_case      = { version = "0.6" }
regex             = { version = "1.0" }
bitflags          = { version = "2.6" }
raw-window-handle = { version = "0.6" }


[workspace.lints.clippy]
not_unsafe_ptr_arg_deref = "allow"
