[package]
name    = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos        = { workspace = true }
napi-derive-ohos = { workspace = true }

ohos-hilog-binding  = { workspace = true }
ohos-bundle-binding = { workspace = true }
ohos-init-binding   = { workspace = true }
ohos-raw-binding    = { workspace = true }

[build-dependencies]
napi-build-ohos = { workspace = true }

[profile.release]
lto = true


[package.metadata.template]
header = """
import { resourceManager } from '@kit.LocalizationKit';

"""