[package]
name        = "ohos-arkui-binding"
version     = "0.0.1"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "OpenHarmony's arkui binding for rust"

[dependencies]
ohos-arkui-sys          = { workspace = true }
napi-sys-ohos           = { workspace = true, optional = true }
napi-ohos               = { workspace = true, optional = true }
ohos_enum_macro         = { workspace = true }
bitflags                = { workspace = true }
ohos-xcomponent-binding = { workspace = true, optional = true }
ohos-xcomponent-sys     = { workspace = true, optional = true }

[features]
default = ["napi", "xcomponent"]

# Allow you to use napi simple binding: convert internal error to napi error, get arkui handle from napi value and so on.
napi = ["dep:napi-ohos", "dep:napi-sys-ohos"]

# Allow you to use xcomponent binding
xcomponent = ["dep:ohos-xcomponent-binding", "dep:ohos-xcomponent-sys"]
