[package]
name        = "ohos-arkui-binding"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "OpenHarmony's arkui binding for rust"

[lints]
workspace = true

[dependencies]
ohos-arkui-sys            = { workspace = true }
napi-sys-ohos             = { workspace = true, optional = true }
napi-ohos                 = { workspace = true, optional = true }
ohos_enum_macro           = { workspace = true }
bitflags                  = { workspace = true }
ohos-xcomponent-binding   = { workspace = true, optional = true }
ohos-xcomponent-sys       = { workspace = true, optional = true }
ohos-arkui-input-binding  = { workspace = true }
ohos-image-binding        = { workspace = true, optional = true }
ohos-image-native-binding = { workspace = true, optional = true }
ohos-drawing-binding      = { workspace = true, optional = true }
ohos-udmf-binding         = { workspace = true, optional = true }

[features]
default    = ["napi", "xcomponent"]
napi       = ["dep:napi-ohos", "dep:napi-sys-ohos"]
xcomponent = ["dep:ohos-xcomponent-binding", "dep:ohos-xcomponent-sys"]
image      = ["dep:ohos-image-binding", "dep:ohos-image-native-binding"]
drawing    = ["dep:ohos-drawing-binding"]
udmf       = ["dep:ohos-udmf-binding"]

# enable multi mode for xcomponent
xcomponent_multi_mode = ["ohos-xcomponent-binding/multi_mode"]

api-13 = [
  "ohos-arkui-sys/api-13",
  "ohos-drawing-binding?/api-13",
  "ohos-xcomponent-binding/api-13",
  "ohos-arkui-input-binding/api-13",
  "ohos-image-binding?/api-13",
  "ohos-image-native-binding?/api-13",
  "ohos-udmf-binding?/api-13",
]
api-14 = [
  "api-13",
  "ohos-arkui-sys/api-14",
  "ohos-drawing-binding?/api-14",
  "ohos-xcomponent-binding/api-14",
  "ohos-arkui-input-binding/api-14",
  "ohos-image-binding?/api-14",
  "ohos-image-native-binding?/api-14",
  "ohos-udmf-binding?/api-14",
]
api-15 = [
  "api-14",
  "ohos-arkui-sys/api-15",
  "ohos-drawing-binding?/api-15",
  "ohos-xcomponent-binding/api-15",
  "ohos-arkui-input-binding/api-15",
  "ohos-image-binding?/api-15",
  "ohos-image-native-binding?/api-15",
  "ohos-udmf-binding?/api-15",
]
api-16 = [
  "api-15",
  "ohos-arkui-sys/api-16",
  "ohos-drawing-binding?/api-16",
  "ohos-xcomponent-binding/api-16",
  "ohos-arkui-input-binding/api-16",
  "ohos-image-binding?/api-16",
  "ohos-image-native-binding?/api-16",
  "ohos-udmf-binding?/api-16",
]
api-17 = [
  "api-16",
  "ohos-arkui-sys/api-17",
  "ohos-drawing-binding?/api-17",
  "ohos-xcomponent-binding/api-17",
  "ohos-arkui-input-binding/api-17",
  "ohos-image-binding?/api-17",
  "ohos-image-native-binding?/api-17",
  "ohos-udmf-binding?/api-17",
]
api-18 = [
  "api-17",
  "ohos-arkui-sys/api-18",
  "ohos-drawing-binding?/api-18",
  "ohos-xcomponent-binding/api-18",
  "ohos-arkui-input-binding/api-18",
  "ohos-image-binding?/api-18",
  "ohos-image-native-binding?/api-18",
  "ohos-udmf-binding?/api-18",
]
api-19 = [
  "api-18",
  "ohos-arkui-sys/api-19",
  "ohos-drawing-binding?/api-19",
  "ohos-xcomponent-binding/api-19",
  "ohos-arkui-input-binding/api-19",
  "ohos-image-binding?/api-19",
  "ohos-image-native-binding?/api-19",
  "ohos-udmf-binding?/api-19",
]
api-20 = [
  "api-19",
  "ohos-arkui-sys/api-20",
  "ohos-drawing-binding?/api-20",
  "ohos-xcomponent-binding/api-20",
  "ohos-arkui-input-binding/api-20",
  "ohos-image-binding?/api-20",
  "ohos-image-native-binding?/api-20",
  "ohos-udmf-binding?/api-20",
]
api-21 = [
  "api-20",
  "ohos-arkui-sys/api-21",
  "ohos-drawing-binding?/api-21",
  "ohos-xcomponent-binding/api-21",
  "ohos-arkui-input-binding/api-21",
  "ohos-image-binding?/api-21",
  "ohos-image-native-binding?/api-21",
  "ohos-udmf-binding?/api-21",
]
api-22 = [
  "api-21",
  "ohos-arkui-sys/api-22",
  "ohos-drawing-binding?/api-22",
  "ohos-xcomponent-binding/api-22",
  "ohos-arkui-input-binding/api-22",
  "ohos-image-binding?/api-22",
  "ohos-image-native-binding?/api-22",
  "ohos-udmf-binding?/api-22",
]
api-23 = [
  "api-22",
  "ohos-arkui-sys/api-23",
  "ohos-drawing-binding?/api-23",
  "ohos-xcomponent-binding/api-23",
  "ohos-arkui-input-binding/api-23",
  "ohos-image-binding?/api-23",
  "ohos-image-native-binding?/api-23",
  "ohos-udmf-binding?/api-23",
]
