[package]
name        = "ohos-arkui-input-binding"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "OpenHarmony's arkui input binding for rust"

[dependencies]
ohos-arkui-input-sys = { workspace = true }
ohos_enum_macro      = { workspace = true }

[lints]
workspace = true

[features]
default = ["api-20"]
api-13  = ["ohos-arkui-input-sys/api-13"]
api-14  = ["api-13", "ohos-arkui-input-sys/api-14"]
api-15  = ["api-14", "ohos-arkui-input-sys/api-15"]
api-16  = ["api-15", "ohos-arkui-input-sys/api-16"]
api-17  = ["api-16", "ohos-arkui-input-sys/api-17"]
api-18  = ["api-17", "ohos-arkui-input-sys/api-18"]
api-19  = ["api-18", "ohos-arkui-input-sys/api-19"]
api-20  = ["api-19", "ohos-arkui-input-sys/api-20"]
