[package]
name        = "ohos-asset-binding"
version     = "0.0.1"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "OpenHarmony's asset binding for rust"

[lints]
workspace = true

[features]
default = []
api-13  = ["ohos-asset-sys/api-13"]
api-14  = ["api-13", "ohos-asset-sys/api-14"]
api-15  = ["api-14", "ohos-asset-sys/api-15"]
api-16  = ["api-15", "ohos-asset-sys/api-16"]
api-17  = ["api-16", "ohos-asset-sys/api-17"]
api-18  = ["api-15", "ohos-asset-sys/api-18"]
api-19  = ["api-18", "ohos-asset-sys/api-19"]
api-20  = ["api-19", "ohos-asset-sys/api-20"]

[dependencies]
ohos-asset-sys = { workspace = true }
