[package]
name        = "ohos-battery-info-binding"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "OpenHarmony's battery info binding for rust"

[dependencies]
ohos-battery-info-sys = { workspace = true }

[features]
default = []
api-13 = ["ohos-battery-info-sys/api-13"]
api-14 = ["api-13", "ohos-battery-info-sys/api-14"]
api-15 = ["api-14", "ohos-battery-info-sys/api-15"]
api-16 = ["api-15", "ohos-battery-info-sys/api-16"]
api-17 = ["api-16", "ohos-battery-info-sys/api-17"]
api-18 = ["api-17", "ohos-battery-info-sys/api-18"]
api-19 = ["api-18", "ohos-battery-info-sys/api-19"]
api-20 = ["api-19", "ohos-battery-info-sys/api-20"]
api-21 = ["api-20", "ohos-battery-info-sys/api-21"]
api-22 = ["api-21", "ohos-battery-info-sys/api-22"]
api-23 = ["api-22", "ohos-battery-info-sys/api-23"]
api-24 = ["api-23", "ohos-battery-info-sys/api-24"]

[lints]
workspace = true
