[package]
name = "ohos-camera-binding"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"
description = "Safe OpenHarmony CameraKit bindings with optional XComponent surface integration"

[lints]
workspace = true

[dependencies]
ohos-enum-derive.workspace = true
ohos-camera-sys.workspace = true
ohos-image-native-binding.workspace = true
ohos-native-window-sys = { workspace = true, optional = true }
ohos-xcomponent-binding = { workspace = true, optional = true, features = ["callbacks"] }

[features]
default = []
xcomponent = ["dep:ohos-native-window-sys", "dep:ohos-xcomponent-binding"]
api-13 = [
    "ohos-camera-sys/api-13",
    "ohos-image-native-binding/api-13",
    "ohos-native-window-sys?/api-13",
    "ohos-xcomponent-binding?/api-13",
]
api-14 = ["api-13", "ohos-camera-sys/api-14", "ohos-image-native-binding/api-14", "ohos-native-window-sys?/api-14", "ohos-xcomponent-binding?/api-14"]
api-15 = ["api-14", "ohos-camera-sys/api-15", "ohos-image-native-binding/api-15", "ohos-native-window-sys?/api-15", "ohos-xcomponent-binding?/api-15"]
api-16 = ["api-15", "ohos-camera-sys/api-16", "ohos-image-native-binding/api-16", "ohos-native-window-sys?/api-16", "ohos-xcomponent-binding?/api-16"]
api-17 = ["api-16", "ohos-camera-sys/api-17", "ohos-image-native-binding/api-17", "ohos-native-window-sys?/api-17", "ohos-xcomponent-binding?/api-17"]
api-18 = ["api-17", "ohos-camera-sys/api-18", "ohos-image-native-binding/api-18", "ohos-native-window-sys?/api-18", "ohos-xcomponent-binding?/api-18"]
api-19 = ["api-18", "ohos-camera-sys/api-19", "ohos-image-native-binding/api-19", "ohos-native-window-sys?/api-19", "ohos-xcomponent-binding?/api-19"]
api-20 = ["api-19", "ohos-camera-sys/api-20", "ohos-image-native-binding/api-20", "ohos-native-window-sys?/api-20", "ohos-xcomponent-binding?/api-20"]
api-21 = ["api-20", "ohos-camera-sys/api-21", "ohos-image-native-binding/api-21", "ohos-native-window-sys?/api-21", "ohos-xcomponent-binding?/api-21"]
api-22 = ["api-21", "ohos-camera-sys/api-22", "ohos-image-native-binding/api-22", "ohos-native-window-sys?/api-22", "ohos-xcomponent-binding?/api-22"]
api-23 = ["api-22", "ohos-camera-sys/api-23", "ohos-image-native-binding/api-23", "ohos-native-window-sys?/api-23", "ohos-xcomponent-binding?/api-23"]
