[package]
name        = "ohos-common-event-binding"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "OpenHarmony's common event binding for rust"

[dependencies]
ohos-common-event-sys = { workspace = true }

[features]
default = []
api-13 = ["ohos-common-event-sys/api-13"]
api-14 = ["api-13", "ohos-common-event-sys/api-14"]
api-15 = ["api-14", "ohos-common-event-sys/api-15"]
api-16 = ["api-15", "ohos-common-event-sys/api-16"]
api-17 = ["api-16", "ohos-common-event-sys/api-17"]
api-18 = ["api-17", "ohos-common-event-sys/api-18"]
api-19 = ["api-18", "ohos-common-event-sys/api-19"]
api-20 = ["api-19", "ohos-common-event-sys/api-20"]
api-21 = ["api-20", "ohos-common-event-sys/api-21"]
api-22 = ["api-21", "ohos-common-event-sys/api-22"]
api-23 = ["api-22", "ohos-common-event-sys/api-23"]
api-24 = ["api-23", "ohos-common-event-sys/api-24"]

[lints]
workspace = true
