[package]
name        = "ohos-crypto-binding"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "OpenHarmony's Crypto Architecture Kit binding for rust"

[dependencies]
ohos-crypto-sys  = { workspace = true }
ohos-enum-derive = { workspace = true }

[features]
default = []
api-13  = ["ohos-crypto-sys/api-13"]
api-14  = ["api-13", "ohos-crypto-sys/api-14"]
api-15  = ["api-14", "ohos-crypto-sys/api-15"]
api-16  = ["api-15", "ohos-crypto-sys/api-16"]
api-17  = ["api-16", "ohos-crypto-sys/api-17"]
api-18  = ["api-17", "ohos-crypto-sys/api-18"]
api-19  = ["api-18", "ohos-crypto-sys/api-19"]
api-20  = ["api-19", "ohos-crypto-sys/api-20"]
api-21  = ["api-20", "ohos-crypto-sys/api-21"]
api-22  = ["api-21", "ohos-crypto-sys/api-22"]
api-23  = ["api-22", "ohos-crypto-sys/api-23"]
api-24  = ["api-23", "ohos-crypto-sys/api-24"]

[lints]
workspace = true
