[package]
name        = "ohos-dlp-permission-binding"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "OpenHarmony's dlp permission binding for rust"

[dependencies]
libc                    = { workspace = true }
ohos-dlp-permission-sys = { workspace = true }

[features]
default = []
api-13 = ["ohos-dlp-permission-sys/api-13"]
api-14 = ["api-13", "ohos-dlp-permission-sys/api-14"]
api-15 = ["api-14", "ohos-dlp-permission-sys/api-15"]
api-16 = ["api-15", "ohos-dlp-permission-sys/api-16"]
api-17 = ["api-16", "ohos-dlp-permission-sys/api-17"]
api-18 = ["api-17", "ohos-dlp-permission-sys/api-18"]
api-19 = ["api-18", "ohos-dlp-permission-sys/api-19"]
api-20 = ["api-19", "ohos-dlp-permission-sys/api-20"]
api-21 = ["api-20", "ohos-dlp-permission-sys/api-21"]
api-22 = ["api-21", "ohos-dlp-permission-sys/api-22"]
api-23 = ["api-22", "ohos-dlp-permission-sys/api-23"]
api-24 = ["api-23", "ohos-dlp-permission-sys/api-24"]

[lints]
workspace = true
